setup prisma for sqlite db

--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,15 @@ yarn-error.log*
 
 # local env files
 .env*.local
-.env
+*.env*
+
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# prisma sqlite database
+dev.db
+dev.db-journal
