Add AI section and test integration

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ USER_PASSWORD=password123
 AUTH_SECRET=your_generated_secret
 NEXTAUTH_URL='http://localhost:3000'
 AUTH_TRUST_HOST=http://localhost:3000
+
+OPENAI_API_KEY=your-api-key
