--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ NEXTAUTH_URL='http://localhost:3000'
 AUTH_TRUST_HOST=http://localhost:3000
 
 OPENAI_API_KEY=your-api-key
+OLLAMA_BASE_URL=http://localhost:11434
