Add playwright e2e testing config

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ next-env.d.ts
 # prisma sqlite database
 dev.db
 dev.db-journal
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
