--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "date-fns": "^3.6.0",
     "langchain": "^0.2.9",
     "lucide-react": "^0.379.0",
-    "next": "14.2.3",
+    "next": "^14.2.18",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
@@ -66,10 +66,10 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.14.10",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.18",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
