--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "^14.2.18",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -66,6 +67,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.14.10",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^8.57.1",
