Eliminate error (sh: su-exec: not found) by including su-exec binary in compose command.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,16 @@
 services:
   app:
+    user: root               
+    command: >
+      sh -c "
+        mkdir -p /data &&
+        chown -R nextjs:nodejs /data &&
+        su-exec nextjs \
+          npx prisma migrate deploy &&
+          npm run seed &&
+          node server.js
+      "
+
     container_name: jobsync_app
     build:
       context: .
