--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,6 @@
+version: '3.8'
 services:
   app:
-    user: root               
-    command: >
-      sh -c "
-        mkdir -p /data &&
-        chown -R nextjs:nodejs /data &&
-        su-exec nextjs \
-          npx prisma migrate deploy &&
-          npm run seed &&
-          node server.js
-      "
-
     container_name: jobsync_app
     build:
       context: .
@@ -21,10 +11,8 @@ services:
     environment:
       NODE_ENV: production
       DATABASE_URL: file:/data/dev.db
-      # Change your initial username and password here
       USER_EMAIL: admin@example.com
       USER_PASSWORD: password123
-      # Refer to readme to generate auth secret
       AUTH_SECRET: Cft42eLmgapfLoot7ByiCL9ToNfbqZ4xaaMuOJsbm+9u
       NEXTAUTH_URL: http://localhost:3000
       AUTH_TRUST_HOST: http://localhost:3000
