--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@hookform/resolvers": "^3.9.1",
     "@langchain/community": "^0.2.18",
     "@langchain/openai": "^0.2.1",
-    "@nivo/bar": "^0.87.0",
-    "@nivo/calendar": "^0.87.0",
-    "@nivo/core": "^0.87.0",
+    "@nivo/bar": "^0.99.0",
+    "@nivo/calendar": "^0.99.0",
+    "@nivo/core": "^0.99.0",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-alert-dialog": "^1.1.3",
+    "@react-spring/web": "^10.0.3",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.3",
@@ -52,7 +53,7 @@
     "next-themes": "^0.4.4",
     "papaparse": "^5.4.1",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.12.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.0",
