--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,10 @@
-DATABASE_URL="file:./dev.db"
+# Note: Copy these variables in your .env file
 
 # Change your username and password here
 USER_EMAIL=admin@example.com
 USER_PASSWORD=password123
 
 # Refer to readme to generate auth secret
-AUTH_SECRET=your_generated_secret
-NEXTAUTH_URL='http://localhost:3000'
-AUTH_TRUST_HOST=http://localhost:3000
+AUTH_SECRET=generate-with-openssl-rand-base64
 
-OPENAI_API_KEY=your-api-key
-OLLAMA_BASE_URL=http://localhost:11434
+OPENAI_API_KEY=your-openai-api-key-here
