Fix sqlite error on server

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,11 @@ USER_PASSWORD=password123
 
 # Refer to readme to generate auth secret
 AUTH_SECRET=generate-with-openssl-rand-base64
+# For homelab server, change the following to your server ip ex: http://192.168.x.x:3000
+NEXTAUTH_URL=http://localhost:3000
+AUTH_TRUST_HOST=true
 
 OPENAI_API_KEY=your-openai-api-key-here
+
+# For homelab server, if you ollama is running on server, change the following to your ollamma ip ex: http://192.168.x.x:12345
+OLLAMA_BASE_URL=http://host.docker.internal:11434
