--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,10 @@ services:
       - USER_EMAIL=${USER_EMAIL}
       - USER_PASSWORD=${USER_PASSWORD}
       - AUTH_SECRET=${AUTH_SECRET}
-      - NEXTAUTH_URL=http://localhost:3000
-      - AUTH_TRUST_HOST=http://localhost:3000
-      - OLLAMA_BASE_URL=http://host.docker.internal:11434
+      - NEXTAUTH_URL=${NEXTAUTH_URL}
+      - AUTH_TRUST_HOST=${AUTH_TRUST_HOST}
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     volumes:
       - ./jobsyncdb/data:/data
+    restart: unless-stopped
