fetch ollama models and validation checks

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Note: Copy these variables in your .env file
 
+# DATABASE_URL=file:./dev.db
 # Change your username and password here
 USER_EMAIL=admin@example.com
 USER_PASSWORD=password123
-
 # Refer to readme to generate auth secret
 AUTH_SECRET=generate-with-openssl-rand-base64
 # For homelab server, change the following to your server ip ex: http://192.168.x.x:3000
