Refactor/Implement agentic AI - Migrate from langchain to ai-sdk

--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.2",
+    "@ai-sdk/react": "^3.0.5",
     "@hookform/resolvers": "^3.9.1",
-    "@langchain/core": "^1.1.7",
-    "@langchain/ollama": "^1.1.0",
-    "@langchain/openai": "^0.2.1",
     "@nivo/bar": "^0.99.0",
     "@nivo/calendar": "^0.99.0",
     "@nivo/core": "^0.99.0",
@@ -41,8 +40,8 @@
     "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
+    "ai": "^6.0.5",
     "bcryptjs": "^2.4.3",
-    "best-effort-json-parser": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -51,6 +50,7 @@
     "next": "^15.5.7",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "ollama-ai-provider-v2": "^2.0.0",
     "papaparse": "^5.4.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.12.0",
