add deepseek models support

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,8 @@ AUTH_TRUST_HOST=true
 
 OPENAI_API_KEY=your-openai-api-key-here
 
+# DeepSeek API Key - get from https://platform.deepseek.com
+DEEPSEEK_API_KEY=your-deepseek-api-key-here
+
 # For homelab server, if you ollama is running on server, change the following to your ollamma ip ex: http://192.168.x.x:12345
 OLLAMA_BASE_URL=http://host.docker.internal:11434
