--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ DEEPSEEK_API_KEY=your-deepseek-api-key-here
 
 # For homelab server, if you ollama is running on server, change the following to your ollamma ip ex: http://192.168.x.x:12345
 OLLAMA_BASE_URL=http://host.docker.internal:11434
+
+# AI Configuration
+# The system uses LLM-based semantic extraction for intelligent, context-aware skill matching
+# No configuration needed - semantic extraction is the default
