--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nivo/calendar": "^0.99.0",
     "@nivo/core": "^0.99.0",
     "@prisma/client": "^6.19.0",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.3",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.3",
