add server timezone for time shift fix

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 # Change your username and password here
 USER_EMAIL=admin@example.com
 USER_PASSWORD=password123
+
+# If you are running it on a remote server/homelab, you must update timezone otherwise activities times may shift
+TZ=America/Edmonton
+
 # Refer to readme to generate auth secret
 AUTH_SECRET=generate-with-openssl-rand-base64
 # For homelab server, change the following to your server ip ex: http://192.168.x.x:3000
