feat(docker): make service port configurable

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,18 @@
 # Note: Copy these variables in your .env file
 
+# Host binding
+# - 127.0.0.1 = only local machine (default, more secure)
+# - 0.0.0.0 = accessible from any IP (external access)
+BIND_IP=127.0.0.1
+BIND_PORT=3000
+
 # DATABASE_URL=file:./dev.db
 # Change your username and password here
 USER_EMAIL=admin@example.com
 USER_PASSWORD=password123
 # Refer to readme to generate auth secret
 AUTH_SECRET=generate-with-openssl-rand-base64
+# App access URL (must match BIND_PORT)
 # For homelab server, change the following to your server ip ex: http://192.168.x.x:3000
 NEXTAUTH_URL=http://localhost:3000
 AUTH_TRUST_HOST=true
