--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,5 @@ OLLAMA_BASE_URL=http://host.docker.internal:11434
 # AI Configuration
 # The system uses LLM-based semantic extraction for intelligent, context-aware skill matching
 # No configuration needed - semantic extraction is the default
+
+RAPIDAPI_KEY=your-rapidapi-key-here
