--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next": "15.5.10",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "node-cron": "^4.2.1",
     "ollama-ai-provider-v2": "^2.0.0",
     "papaparse": "^5.4.1",
     "react": "19.2.4",
@@ -73,6 +74,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.2",
+    "@types/node-cron": "^3.0.11",
     "@types/papaparse": "^5.3.15",
     "@types/react": "19.2.10",
     "@types/react-dom": "19.2.3",
