--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.469.0",
     "next": "15.5.10",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.4",
     "node-cron": "^4.2.1",
     "ollama-ai-provider-v2": "^2.0.0",
@@ -71,7 +71,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.2",
     "@types/node-cron": "^3.0.11",
