--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,15 @@ services:
     ports:
       - "3000:3000"
     environment:
-      # Please do not forget to create and update your .env file
       - NODE_ENV=production
       - DATABASE_URL=file:/data/dev.db
-      - USER_EMAIL=${USER_EMAIL}
-      - USER_PASSWORD=${USER_PASSWORD}
-      - AUTH_SECRET=${AUTH_SECRET}
+      - AUTH_SECRET=${AUTH_SECRET:-}
       - NEXTAUTH_URL=${NEXTAUTH_URL}
       - AUTH_TRUST_HOST=${AUTH_TRUST_HOST}
       - OLLAMA_BASE_URL=${OLLAMA_BASE_URL}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+      - RAPIDAPI_KEY=${RAPIDAPI_KEY}
     volumes:
       - ./jobsyncdb/data:/data
     restart: unless-stopped
