--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - DATABASE_URL=file:/data/dev.db
       - AUTH_SECRET=${AUTH_SECRET:-}
       - NEXTAUTH_URL=${NEXTAUTH_URL}
-      - AUTH_TRUST_HOST=${AUTH_TRUST_HOST}
+      - AUTH_TRUST_HOST=true
       - OLLAMA_BASE_URL=${OLLAMA_BASE_URL}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
