Refactor docker entrypoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,13 @@ services:
       - NODE_ENV=production
       - DATABASE_URL=file:/data/dev.db
       - AUTH_SECRET=${AUTH_SECRET:-}
-      - NEXTAUTH_URL=${NEXTAUTH_URL}
-      - AUTH_TRUST_HOST=true
-      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
-      - RAPIDAPI_KEY=${RAPIDAPI_KEY}
+      - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:3000}
+      - AUTH_TRUST_HOST=${AUTH_TRUST_HOST:-true}
+      - TZ=${TZ:-America/Edmonton}
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://host.docker.internal:11434}
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY:-}
+      - RAPIDAPI_KEY=${RAPIDAPI_KEY:-}
     volumes:
       - ./jobsyncdb/data:/data
     restart: unless-stopped
