Update .env.example with Ollama base URL setting

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ DEEPSEEK_API_KEY=your-deepseek-api-key-here
 
 # For homelab server, if you ollama is running on server, change the following to your ollamma ip ex: http://192.168.x.x:12345
 OLLAMA_BASE_URL=http://host.docker.internal:11434
+NEXT_PUBLIC_OLLAMA_BASE_URL=http://host.docker.internal:11434
+
 
 # AI Configuration
 # The system uses LLM-based semantic extraction for intelligent, context-aware skill matching
