Use encryption key for apikeys

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,11 @@ NEXTAUTH_URL=http://localhost:3000
 # To set manually, uncomment and provide your own value:
 # AUTH_SECRET=
 
+# ENCRYPTION_KEY is used to encrypt stored API keys (OpenAI, DeepSeek, RapidAPI)
+# Must be stable across restarts — changing it will make all stored API keys unrecoverable
+# Generate with: openssl rand -base64 32
+# ENCRYPTION_KEY=
+
 OPENAI_API_KEY=your-openai-api-key-here
 
 # DeepSeek API Key - get from https://platform.deepseek.com
