--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,14 @@
 services:
   app:
+    image: ghcr.io/gsync/jobsync:latest
     container_name: jobsync_app
-    build:
-      context: .
-      dockerfile: Dockerfile
     ports:
       - "3737:3000"
     environment:
       - NODE_ENV=production
       - DATABASE_URL=file:/data/dev.db
       - AUTH_SECRET=${AUTH_SECRET:-}
-      - ENCRYPTION_KEY=you-encryption-key-here
+      - ENCRYPTION_KEY=${ENCRYPTION_KEY:-you-encryption-key-here}
       - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:3737}
       - AUTH_TRUST_HOST=${AUTH_TRUST_HOST:-true}
       - TZ=${TZ:-America/Edmonton}
@@ -21,3 +19,9 @@ services:
     volumes:
       - ./jobsyncdb/data:/data
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:3737"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
